--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -5,10 +5,13 @@
     </div>
     <div *ngIf="this.authenticated=='patient'" [matMenuTriggerFor]="menu">
       <p>Book</p>
-<mat-menu #menu="matMenu" xPosition="before">
-  <button mat-menu-item routerLink="/{{authenticated}}/book/walkin">Walkin</button>
-  <button mat-menu-item routerLink="/{{authenticated}}/book/annual">Annual</button>
-</mat-menu>
+      <mat-menu #menu="matMenu" xPosition="before">
+        <button mat-menu-item routerLink="/{{authenticated}}/book/walkin">Walkin</button>
+        <button mat-menu-item routerLink="/{{authenticated}}/book/annual">Annual</button>
+      </mat-menu>
+    </div>
+    <div *ngIf="this.authenticated=='nurse'" routerLink="/{{authenticated}}/book">
+      <p>Book for a patient</p>
     </div>
     <div (click)="this.logout()">
       <p> Logout </p>
