--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
@@ -3,12 +3,13 @@
     <mat-form-field>
       <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.healthCard">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.healthCard" (onSelectionChange)='getSelection(option)'>
           {{option.healthCard}}
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
   </form>
+  
 
 
 
