--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="mdc-layout-grid__cell">
        <i class="material-icons" routerLink="/user-profile"> person_pin </i>
-       <i class="material-icons" matBadge="{{this.cartDataService.list.length}}" routerLink="/cart" >shopping_cart</i>
+       <i class="material-icons" id="patient-cart" matBadge="{{this.cartDataService.list.length}}" routerLink="/cart" >shopping_cart</i>
       </div>
     </div>
   </div>
