--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
@@ -1,7 +1,7 @@
 <div>
   <form>
     <mat-form-field>
-      <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <input type="text" placeholder="Choose a patient" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option *ngFor="let option of filteredOptions | async" [value]="option.healthCard" (onSelectionChange)='getSelection(option)'>
           {{option.healthCard}}
@@ -9,7 +9,25 @@
       </mat-autocomplete>
     </mat-form-field>
   </form>
-  
+
+  <mat-card class="example-card" *ngIf="selected">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title> {{selected.firstName}}</mat-card-title>
+      <mat-card-subtitle>{{selected.lastName}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://semantic-ui.com/images/avatar/large/steve.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+    <pre>
+      <span>Health Card # : {{selected.healthCard}} </span>
+      <span>Gender : {{selected.gender}} </span>
+      <span>Email : {{selected.email}} </span>
+      <span>Address: {{selected.address}} </span>
+      <span>Phone: {{selected.phone}} </span>
+      <span>Birth Date: {{selected.birthday}} </span>
+    </pre>
+    </mat-card-content>
+  </mat-card>
 
 
 
