--- a/client/src/app/components/patients/patient/patient.component.html
+++ b/client/src/app/components/patients/patient/patient.component.html
@@ -8,7 +8,7 @@
               <p mat-line>
                 <span>{{list.appointmentType}} Appointment: </span>
               </p>
-              <button mat-button style="float: right;">Cancel</button>
+              <button mat-button style="float: right;" (click)="cancelBooking(list)">Cancel</button>
               <button mat-button style="float: right;">Update</button>
               <p mat-line>
                 <span>Booking is on {{list.date}} at {{list.time}} with Dr. {{list.doctorDetails.lastName}}</span>
