--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.html
@@ -1,7 +1,7 @@
 <div>
   <form>
     <mat-form-field>
-      <input type="text" placeholder="Choose a patient" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <input type="text" placeholder="Choose a patient" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" maxlength="12">
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option *ngFor="let option of filteredOptions | async" [value]="option.healthCard" (onSelectionChange)='getSelection(option)'>
           {{option.healthCard}}
@@ -10,7 +10,7 @@
     </mat-form-field>
   </form>
 
-  <mat-card class="example-card" *ngIf="selected">
+  <mat-card class="example-card" *ngIf="selected" (swipe)="onSwipe($event)">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title> {{selected.firstName}}</mat-card-title>
