--- a/client/src/app/components/patients/patient-cancel/patient-cancel.component.html
+++ b/client/src/app/components/patients/patient-cancel/patient-cancel.component.html
@@ -1,6 +1,9 @@
-<h1 mat-dialog-title>Booking</h1>
+<h1 mat-dialog-title>Cancel Appointment</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to cancel this appointment?</p>
+
+  <p>Appointment Details: </p>
+  <p>{{this.data.appointmentType}} appointment on {{this.data.date}} at {{this.data.time}}</p>
+  <p>Are you sure you want to cancel this appointment with Dr. {{this.data.doctorDetails.lastName}}?</p>
 
 </div>
 <button mat-button (click)="close()">No</button>
