--- a/client/src/app/components/patients/patient-booking/patient-booking.component.html
+++ b/client/src/app/components/patients/patient-booking/patient-booking.component.html
@@ -1,8 +1,15 @@
-<h1 mat-dialog-title>Booking</h1>
+<div class = "content">
+<h2 mat-dialog-title>Add to Cart</h2>
 <div mat-dialog-content>
-  <p>Book me</p>
+  <p>Would you like to add this <strong> {{this.data.appointmentType}} </strong> appointment from
+    <strong> {{this.data.startTime}} </strong>
+    to <strong> {{this.data.endTime}} </strong> to your cart?</p>
 
 </div>
-  <button mat-button (click)="close()">Cancel</button>
-  <button mat-button (click)="bookAppointment() ">Add to cart</button>
 
+<div mat-dialog-actions align = "end">
+  <button mat-stroked-button color="primary" (click)="close()">Cancel</button>
+  <button mat-stroked-button color="primary" (click)="bookAppointment() ">Add to cart</button>
+</div>
+
+</div>
