improved frontend for booking

--- a/client/src/app/components/patients/patient-booking/patient-booking.component.html
+++ b/client/src/app/components/patients/patient-booking/patient-booking.component.html
@@ -2,8 +2,8 @@
 <h2 mat-dialog-title>Add to Cart</h2>
 <div mat-dialog-content>
   <p>Would you like to add this <strong> {{this.data.appointmentType}} </strong> appointment from
-    <strong> {{this.data.startTime}} </strong>
-    to <strong> {{this.data.endTime}} </strong> to your cart?</p>
+    <strong> {{this.start}} </strong>
+    to <strong> {{this.end}} </strong> on <strong> {{this.day}} </strong>to your cart?</p>
 
 </div>
 
