--- a/client/src/app/components/shared/header/header.component.scss
+++ b/client/src/app/components/shared/header/header.component.scss
@@ -1,5 +1,5 @@
 i {
-    font-size: 50px;
+    font-size: 40px;
 }
 
 i:focus, h2:focus, h5:focus {
@@ -20,6 +20,7 @@ i:hover, h2:hover, h5:hover {
 
 .mdc-layout-grid__cell {
     text-align: center;
+    padding-top: 2%;
 }
 
 .cart-icon{
