--- a/client/src/app/components/patients/patient-cart/patient-cart/patient-cart.component.html
+++ b/client/src/app/components/patients/patient-cart/patient-cart/patient-cart.component.html
@@ -1,15 +1,24 @@
 <div>
-  <h2>Cart</h2>
-  <ul>
-    <li *ngFor="let cart of cart; let i = index">
-      <div>
-    <span class="badge">Appointment from {{cart.start}} to {{cart.end}} on {{cart.day}}
-    </span>
-        <button mat-button (click)="remove(i)">Remove</button>
-      </div>
-    </li>
-  </ul>
-  <ng-template #other_content>Cart is empty</ng-template>
-</div>
-<button *ngIf="this.cart.length>=1;else other_content" mat-button (click)="openDialog()">Checkout</button>
+  <h2>Your Cart</h2>
 
+  <span *ngIf="this.cart.length==0">Your cart is empty</span>
+
+  <table *ngIf="this.cart.length>=1">
+    <tr>
+      <th>Appointment Type</th>
+      <th>Day</th>
+      <th>Time</th>
+      <th>Remove from Cart</th>
+    </tr>
+    <tr *ngFor="let appointment of cart; let i = index">
+      <td> {{appointment.appointmentType}} </td>
+      <td> {{appointment.day}} </td>
+      <td> {{appointment.start}} to {{appointment.end}} </td>
+      <td> <button mat-stroked-button (click)="remove(i)">Remove</button></td>
+    </tr>
+  </table>
+</div>
+
+<div class="checkout">
+  <button *ngIf="this.cart.length>=1" mat-stroked-button (click)="openDialog()" id="checkout">Checkout</button>
+</div>
