Update modal creation

--- a/client/src/app/components/patients/patient/patient.component.html
+++ b/client/src/app/components/patients/patient/patient.component.html
@@ -9,7 +9,7 @@
                 <span>{{list.appointmentType}} Appointment: </span>
               </p>
               <button mat-button style="float: right;" (click)="cancelBooking(list)">Cancel</button>
-              <button mat-button style="float: right;">Update</button>
+              <button mat-button style="float: right;" (click)="updateBooking(list)">Update</button>
               <p mat-line>
                 <span>Booking is on {{list.date}} at {{this.convertTime((list.date + " "  + list.time))}} with Dr. {{list.doctorDetails.lastName}}</span>
               </p>
