call to the backend for update

--- a/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
+++ b/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
@@ -7,4 +7,4 @@
 
 </div>
 <button mat-button (click)="close()">No</button>
-<button mat-button (click)="cancelAppointment()">Yes</button>
+<button mat-button (click)="updateAppointment()">Yes</button>
