Update call to backend

--- a/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
+++ b/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
 
   <p>Appointment Details: </p>
-  <p>{{this.data.appointmentType}} appointment on {{this.data.date}} at {{this.data.startTime}}</p>
+  <p>{{this.data[0].appointmentType}} appointment on {{this.data[0].date}} at {{this.data[0].startTime}}</p>
   <p>Are you sure you want to update to this appointment?</p>
 
 </div>
