--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
@@ -9,8 +9,13 @@
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
 }
 
-.example-header-image {
+.example-header-image-male {
   background-image: url('https://semantic-ui.com/images/avatar/large/steve.jpg');
+  background-size: cover;
+}
+
+.example-header-image-female {
+  background-image: url('https://semantic-ui.com/images/avatar/large/jenny.jpg');
   background-size: cover;
 }
 
