--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
@@ -4,9 +4,16 @@
 
 .example-card {
   max-width: 400px;
-  margin: auto;
   transition: all .25s linear;
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
+  margin: 15px;
+}
+
+.example-card-info {
+  max-width: 500px;
+  transition: all .25s linear;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
+  margin: 15px;
 }
 
 .example-header-image-male {
@@ -26,4 +33,8 @@
 .example-button-row button,
 .example-button-row a {
   margin-left: 15px;
+}
+
+.container {
+  display: inline-flex;
 }
