--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list class="sidebar">
-  <a mat-list-item routerLink="/{{authenticated}}" *ngIf="this.authenticated=='doctor'"> Upcoming Appointments </a>
+  <a mat-list-item routerLink="/{{authenticated}}" *ngIf="this.authenticated=='doctor'"> Next Appointments </a>
   <a mat-list-item routerLink="/{{authenticated}}/availabilities" *ngIf="this.authenticated==='doctor'">
     Your
     availabilities </a>
