--- a/client/src/app/components/doctors/upcoming-appointments/upcoming-appointments.component.scss
+++ b/client/src/app/components/doctors/upcoming-appointments/upcoming-appointments.component.scss
@@ -1,10 +1,31 @@
-h4 {
-    margin-left: 5%;
+td, th {
+    padding: 10px;
+    text-align: center;
+    width: 250px;
+    background-color: white;
 }
 
+.checkout {
+    max-width: 1000px;
+    text-align: center;
+}
 
-.calendar {
-    background-color: white;
-    width: 90%;
-    font-size: 10px;
+button {
+    background-color: #ff4c4c;
+}
+
+#checkout {
+    margin-right: 20px;
+    background-color: rgb(0, 255, 0);
+}
+
+table {
+    margin: 50px 0;
+    margin-right: 100px;
+    border: solid grey;
+    border-width: thin;
+}
+
+th {
+    background-color: lightgray;
 }
