--- a/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
+++ b/client/src/app/components/nurses/nurse-booking/nurse-booking.component.scss
@@ -10,7 +10,7 @@
 }
 
 .example-card-info {
-  max-width: 500px;
+  max-width: 600px;
   transition: all .25s linear;
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.4);
   margin: 15px;
@@ -26,7 +26,7 @@
   background-size: cover;
 }
 
-.example-card:hover{
+.example-card:hover,.example-card-info:hover{
   box-shadow: -1px 10px 29px 0px rgba(0,0,0,0.8);
 }
 
