--- a/client/src/app/components/patients/patient-cancel/patient-cancel.component.html
+++ b/client/src/app/components/patients/patient-cancel/patient-cancel.component.html
@@ -1,10 +1,10 @@
 <h1 mat-dialog-title>Cancel Appointment</h1>
 <div mat-dialog-content>
 
-  <p>Appointment Details: </p>
-  <p>{{this.data.appointmentType}} appointment on {{this.data.date}} at {{this.convertTime((this.data.date + " "  + this.data.time))}}</p>
+  <p>Appointment Details: {{this.data.appointmentType}} appointment</p>
+  <h5 class="center"> {{this.convertTime(this.data.date + " "  + this.data.time)}}</h5>
   <p>Are you sure you want to cancel this appointment with Dr. {{this.data.doctorDetails.lastName}}?</p>
 
 </div>
-<button mat-button (click)="close()">No</button>
-<button mat-button (click)="cancelAppointment()">Yes</button>
+<button mat-button class="center" (click)="cancelAppointment()">Confirm</button>
+<button mat-button class="center" (click)="close()">Cancel</button>
