--- a/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
+++ b/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.html
@@ -1,10 +1,15 @@
 <h1 mat-dialog-title>Update Appointment</h1>
 <div mat-dialog-content>
 
-  <p>Appointment Details: </p>
-  <p>{{this.data[0].appointmentType}} appointment on {{this.data[0].date}} at {{this.data[0].startTime}}</p>
-  <p>Are you sure you want to update from {{this.data.old.date}} at {{this.data.old.time}} to this appointment?</p>
+  <!-- Use this format to show data: {{this.data[0].date}}  -->
+    <p>Appointment Details: {{this.data[0].appointmentType}} appointment</p>
+    <p>Update your current appointment from </p>
+    <p class="center"> {{this.data.old.date}} at {{this.data.old.time}}</p>
+    <p>to the following appointment</p>
+    <p class="center">{{this.data[0].startTime}}</p>
 
 </div>
-<button mat-button (click)="close()">No</button>
-<button mat-button (click)="updateAppointment()">Yes</button>
+<div class="center">
+  <button mat-button (click)="updateAppointment()">Confirm</button>
+  <button mat-button (click)="close()">Cancel</button>
+</div>
