--- a/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.scss
+++ b/client/src/app/components/patients/patient-update-confirmation/patient-update-confirmation.component.scss
@@ -1,3 +1,15 @@
 .center {
     text-align: center;
   }
+
+  #show_old_info {
+    background-color: orangered;
+    padding: 5px;
+    font-weight:bold;
+  }
+
+  #show_new_info {
+    background-color: yellowgreen;
+    padding: 5px;
+    font-weight:bold;
+  }
