--- a/client/src/app/components/nurses/nurse-patient-booking/nurse-patient-booking.component.html
+++ b/client/src/app/components/nurses/nurse-patient-booking/nurse-patient-booking.component.html
@@ -10,10 +10,10 @@
     <h3 mat-subheader>Appointment Infos</h3>
     <mat-list-item role="listitem">
       <mat-icon mat-list-icon>date_range</mat-icon>
-      <h4 mat-line>  {{data.cart.appointmentType.toLocaleString().toLocaleLowerCase().replace("_"," ")}} </h4>
-      <p mat-line> {{data.cart.doctorPermitNumber}} </p>
-      <p mat-line> From: {{data.cart.endTime | date:'dd.MM.yy HH:mm'}} </p>
-      <p mat-line> To: {{data.cart.startTime | date:'dd.MM.yy HH:mm'}} </p>
+      <h4 mat-line> Appointment Type: {{data.cart.appointmentType.toLocaleString().toLocaleLowerCase().replace("_"," ")}} </h4>
+      <p mat-line> Doctor: {{data.cart.doctorPermitNumber}} </p>
+      <p mat-line> From: {{data.cart.startTime | date:'dd.MM.yy HH:mm'}} </p>
+      <p mat-line> To: {{data.cart.endTime | date:'dd.MM.yy HH:mm'}} </p>
     </mat-list-item>
   </mat-list>
   <diV mat-dialog-actions align="end">
