--- a/client/src/app/components/patients/patient-view-availability/patient-view-availability.component.html
+++ b/client/src/app/components/patients/patient-view-availability/patient-view-availability.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   
   <div class="chooseClinic">
-    <form [formGroup]="chooseClinic" (ngSubmit)="onSubmit()">
+    <form>
         <mat-form-field>
             <mat-label>Choose Clinic</mat-label>
             <mat-select (selectionChange)="getNewAvailabilities($event.value);">
