adding frontend for clinic profile

--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -4,9 +4,11 @@
     Your
     availabilities </a>
 
+  <a mat-list-item routerLink="/clinics"> View Clinics </a>
+
   <mat-accordion *ngIf="this.authenticated==='patient'">
 
-      <a mat-list-item routerLink="/{{authenticated}}"> View Bookings </a>
+    <a mat-list-item routerLink="/{{authenticated}}"> View Bookings </a>
 
     <mat-expansion-panel>
       <mat-expansion-panel-header>
