--- a/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
+++ b/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
@@ -1,27 +1,25 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-  <!-- This is the tree node template for leaf nodes -->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <li class="mat-tree-node">
-      <!-- use a disabled button to provide padding for tree leaf -->
-      <button mat-icon-button disabled></button>
-      {{node.name}}
-    </li>
-  </mat-tree-node>
-  <!-- This is the tree node template for expandable nodes -->
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <li>
-      <div class="mat-tree-node">
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'toggle ' + node.name">
-          <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-          </mat-icon>
-        </button>
-        {{node.name}}
-      </div>
-      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
-        <ng-container matTreeNodeOutlet></ng-container>
-      </ul>
-    </li>
-  </mat-nested-tree-node>
-</mat-tree>
+<mat-card>
+  <p>CLINIC NAME</p>
+
+  <mat-list role="list">
+
+    <mat-divider></mat-divider>
+    <h3 matSubheader>Our Clinic Hours </h3>
+    <mat-list-item role="listitem">8:00 - 15:00</mat-list-item>
+
+    <mat-divider></mat-divider>
+    <h3 matSubheader>Our Doctors</h3>
+    <mat-list-item role="listitem">Doctor 1</mat-list-item>
+    <mat-list-item role="listitem">Doctor 2</mat-list-item>
+
+    <mat-divider></mat-divider>
+    <h3 matSubheader>Our Nurses</h3>
+    <mat-list-item role="listitem">Nurse 1</mat-list-item>
+    <mat-list-item role="listitem">Nurse 2</mat-list-item>
+    <mat-list-item role="listitem">Nurse 3</mat-list-item>
+
+    <mat-divider></mat-divider>
+    <h3 matSubheader>Our Available Rooms </h3>
+    <mat-list-item role="listitem">Room</mat-list-item>
+  </mat-list>
+</mat-card>
