clinic profile add back button

--- a/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
+++ b/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <p>CLINIC NAME</p>
+  <h3>CLINIC NAME</h3>
 
   <mat-list role="list">
 
@@ -22,4 +22,7 @@
     <h3 matSubheader>Our Available Rooms </h3>
     <mat-list-item role="listitem">Room</mat-list-item>
   </mat-list>
+  <p></p>
+
+  <button mat-flat-button routerlink="/clinics">Back</button>
 </mat-card>
