admin panel registrations

--- a/client/src/app/components/admin/login/admin-login.component.html
+++ b/client/src/app/components/admin/login/admin-login.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <h2> Admin Login </h2>
-  <form *ngIf="!(this.authenticated)" [formGroup]="adminLogin" (ngSubmit)="onSubmit2()">
+  <form *ngIf="!(this.authenticated)" [formGroup]="adminLogin" (ngSubmit)="onSubmit()">
     <div>
       <mat-form-field>
         <input matInput placeholder="Username" formControlName="userName">
