fix clinic profile back button

--- a/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
+++ b/client/src/app/components/clinics/clinic-profile/clinic-profile.component.html
@@ -75,5 +75,5 @@
   </mat-list>
   <p></p>
 
-  <button mat-flat-button routerlink="/clinics">Back</button>
+  <button mat-flat-button routerLink="/clinics">Back</button>
 </mat-card>
