--- a/client/src/app/components/shared/sidenav/sidenav.component.html
+++ b/client/src/app/components/shared/sidenav/sidenav.component.html
@@ -30,6 +30,24 @@
 
   <a mat-list-item *ngIf="this.authenticated=='admin'" routerLink="/{{authenticated}}/register"> Register </a>
 
+  <mat-accordion *ngIf="this.authenticated==='admin'">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <p class="dropdown" mat-list-item> Manage </p>
+      </mat-expansion-panel-header>
+      <mat-nav-list class="dropdown-options">
+        <button mat-button  routerLink="/{{authenticated}}/manage/doctor">
+          <i class="material-icons">enhanced_encryption</i>
+          Doctors
+        </button>
+        <button mat-button routerLink="/{{authenticated}}/manage/nurse">
+          <i class="material-icons">pregnant_woman</i>
+          Nurses
+        </button>
+      </mat-nav-list>
+    </mat-expansion-panel>
+  </mat-accordion>
+
   <a mat-list-item (click)="this.logout()" id="logout"> Logout </a>
 
 </mat-nav-list>
